[package]
name = "wsmsg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
ws="0.9.2"
lazy_static="1.4.0"
rand="0.8.5"
rand_hc="0.3.2"